@@ -1,8 +1,3 @@
-import org.chai.kevin.survey.Survey;
-import org.chai.location.CalculationLocation;
-import org.chai.location.Location;
-import org.chai.task.Progress;
-
 /*
 * Copyright (c) 2011, Clinton Health Access Initiative.
 *
@@ -37,6 +32,11 @@ import org.chai.init.ReportInitializer;
 import org.chai.init.StructureInitializer;
 import org.chai.init.SurveyInitializer;
 
+import org.chai.kevin.survey.Survey;
+import org.chai.location.CalculationLocation;
+import org.chai.location.Location;
+import org.chai.task.Progress;
+
 import java.util.Date;
 import java.nio.channels.Channel;
 import org.chai.kevin.security.Role;
@@ -55,6 +55,9 @@ import org.chai.task.Task.TaskStatus;
 import org.chai.kevin.value.RawDataElementValue;
 import org.springframework.amqp.rabbit.core.ChannelCallback;
 
+import java.lang.management.RuntimeMXBean
+import java.lang.management.ManagementFactory
+
 import com.ibm.jaql.lang.expr.core.TimeoutExpr.TaskState;
 
 class BootStrap {
@@ -66,7 +69,10 @@ class BootStrap {
 	def refreshValueService
 	def surveyPageService
 	
-    def init = { servletContext ->
+	def init = { servletContext ->
+		// we print the amount of permgen
+		printProperty("-XX:MaxPermSize=");
+	
 		// we clear the queue
 		// assumption is that at this point of the startup process,
 		// no task has been picked for processing if
@@ -144,7 +150,6 @@ class BootStrap {
 			DataInitializer.createNormalizedDataElements();
 			DataInitializer.createSums();
 			DataInitializer.createModes();
-						
 			refreshValueService.refreshAll(null)
 			
 			// we initialize the reports
@@ -174,5 +179,19 @@ class BootStrap {
     }
 
     def destroy = { }
+
+	static def printProperty(def prefix) {
+		final RuntimeMXBean memMXBean = ManagementFactory.getRuntimeMXBean();
+		final List<String> jvmArgs = memMXBean.getInputArguments();
+        String value = null;
+        for (final String jvmArg : jvmArgs) {
+            if (jvmArg.startsWith(prefix)) {
+                value = jvmArg.substring(prefix.length());
+                break;
+            }
+        }
+
+		println (prefix + value);
+	}
 	
 }
